# crates-tui

./: .envrc  .gitignore  .release-plz.toml  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.config/: config.default.toml  dracula.yaml  github.yaml  rose-pine.yaml
.data/: ratatui-full-crate.toml  vhs.tape
.github/workflows/: cd.yml  ci.yml  release-plz.yml  release.yml
nix/: package.nix
src/: action.rs  app.rs  cli.rs  color.rs  command.rs  config.default.toml  config.rs  crates_io_api_helper.rs  errors.rs  events.rs  logging.rs  main.rs  mode.rs  picker.rs  root.rs  runner.rs  serde_helper.rs  tui.rs  utils.rs  widgets.rs
src/app/: search.rs  search_page.rs
src/widgets/: crate_home_page.rs  crate_info.rs  crate_info_table.rs  crates_table.rs  help.rs  popup.rs  popup_message.rs  prompt.rs  search_filter_prompt.rs  search_page.rs  search_prompt.rs  search_results.rs  search_results_table.rs  status_bar.rs  summary.rs  tabs.rs
