[package]
name = "crates-tui"
version = "0.1.21"
edition = "2021"
description = "A TUI for crates.io"
license = "MIT"
repository = "https://github.com/ratatui-org/crates-tui"
authors = ["The Ratatui Developers"]
build = "build.rs"

[package.metadata.wix]
upgrade-guid = "75B519B6-FF67-49E6-A6D3-5D5794A5A6AA"
path-guid = "C3C0C045-C8A0-4585-A888-BE5C46534B7D"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.3.0"
cfg-if = "1.0.0"
chrono = "0.4.38"
clap = { version = "4.5.19", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
    "color",
] }
color-eyre = "0.6.3"
copypasta = "0.10.1"
crates_io_api = "0.11.0"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
figment = { version = "0.10.19", features = ["env", "toml", "yaml"] }
futures = "0.3.31"
human-panic = "2.0.1"
itertools = "0.13.0"
json5 = "0.4.1"
lazy_static = "1.5.0"
libc = "0.2.159"
num-format = "0.4.4"
pretty_assertions = "1.4.1"
ratatui = { version = "0.28.0", features = ["serde", "macros"] }
ratatui-macros = "0.5.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_with = "3.11.0"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.3", features = ["derive"] }
textwrap = "0.16.1"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
tokio-util = "0.7.12"
toml = "0.8.16"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-error = "0.2.0"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "serde",
    "serde_json",
] }
tui-input = "0.10.1"
unicode-width = "0.2.0"
uuid = "1.10.0"
webbrowser = "1.0.2"

[build-dependencies]
vergen = { version = "8.3.2", features = ["build", "git", "git2", "cargo"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.9.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"
