[package]
name = "crates-tui"
version = "0.1.26"
edition = "2024"
description = "A TUI for crates.io"
license = "MIT"
repository = "https://github.com/ratatui-org/crates-tui"
authors = ["The Ratatui Developers"]
build = "build.rs"

[package.metadata.wix]
upgrade-guid = "75B519B6-FF67-49E6-A6D3-5D5794A5A6AA"
path-guid = "C3C0C045-C8A0-4585-A888-BE5C46534B7D"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.3"
cfg-if = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
    "color",
] }
color-eyre = "0.6"
copypasta = "0.10"
crates_io_api = "0.12"
crossterm = { version = "0.29", features = ["serde", "event-stream"] }
derive_deref = "1"
directories = "6"
figment = { version = "0.10", features = ["env", "toml", "yaml"] }
futures = "0.3"
human-panic = "2"
itertools = "0.14"
num-format = "0.4"
ratatui = { version = "0.30.0", features = ["serde", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_with = "3"
strum = { version = "0.27", features = ["derive"] }
textwrap = "0.16"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
toml = "0.9"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde", "serde_json"] }
tui-input = "0.15"
unicode-width = "0.2"
uuid = "1"
webbrowser = "1"

[build-dependencies]
vergen = { version = "8", features = ["build", "git", "git2", "cargo"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.9.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"

[package.metadata.cargo-machete]
ignored = ["chrono"]
